guest-di-preseed/extra/for-target-etc/iptables/rules.v4
*filter

-P INPUT DROP
-P FORWARD ACCEPT
-P OUTPUT ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j DROP
-A INPUT ! -i lo -d 127.0.0.0/8 -j DROP

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT 
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT

-A INPUT -j REJECT

-A OUTPUT -p icmp --icmp-type time-exceeded -j DROP

COMMIT
